Revert use of null in Phone and Address